; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/locks/extr_locks.c___netdata_rwlock_trywrlock.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/locks/extr_locks.c___netdata_rwlock_trywrlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__netdata_rwlock_trywrlock(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = call i32 (...) @netdata_thread_disable_cancelability()
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @pthread_rwlock_trywrlock(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 (...) @netdata_thread_enable_cancelability()
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @netdata_thread_disable_cancelability(...) #1

declare dso_local i32 @pthread_rwlock_trywrlock(i32*) #1

declare dso_local i32 @netdata_thread_enable_cancelability(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
